# pareo-api

./: .dockerignore  .pre-commit-config.yaml  README.md  alembic.ini  cspell.json  docker-compose.yml  dockerfile  hello.py  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
doc/: folder_structure.md
migrations/: env.py
migrations/versions/: 3daf0fe01f2e_simplify_credit_invoices_table.py  5a25238141f0_add_credit_invoices_table.py  8fc8eca45073_create_credit_system_tables.py  add_billing_info_table.py  add_currency_to_credit_packages.py  add_default_credit_packages.py  add_deleted_at_to_users.py  add_name_to_billing_info.py  add_updated_at_to_invoices.py  d1b7e45b1fc7_create_credit_configuration_table.py  fab0fae91b58_merge_multiple_heads.py  merge_heads.py  merge_heads_for_billing.py  merge_heads_for_invoices.py  remove_pdf_columns.py  simplify_credit_invoices_table.py
sql/: credits.sql  investors.sql
src/: test_investor_finder.py  test_investor_match_endpoint.py
src/app/: __init__.py  main.py
src/app/api/: __init__.py  dependencies.py
src/app/api/v1/: __init__.py  billing_endpoints.py  clerk_user_sync_endpoints.py  (+5 more)
src/app/core/: __init__.py  auth.py  config.py  database.py  exceptions.py
src/app/models/: __init__.py  base.py  billing_info.py  credits.py  investors.py  user.py
src/app/repositories/: __init__.py  billing_repository.py  credit_repository.py  user_repository.py
src/app/schemas/: __init__.py  billing.py  credits.py  investor.py  item.py  payments.py  user.py
src/app/services/: __init__.py  billing_service.py  clerk_user_sync_service.py  credit_service.py  database_session_manager.py  investor_finder.py  investor_oracle.py  payment_service.py
src/utils/: railway_migration.py
tests/Pareo API/: Credit Balance.bru  bruno.json
(+3 files in other folders)
