[project]
name = "pareo-api"
version = "0.1.0"
description = "API for Pareo"
authors = [ {name = "André Gröschel", email = "andre@pareo.app"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "crawl4ai>=0.4.247",
    "loguru>=0.7.3",
    "pre-commit>=4.0.1",
    "pydantic-ai>=0.0.20",
    "python-dotenv>=1.0.1",
    "openai>=1.60.1",
    "pydantic-settings>=2.7.1",
    "mypy>=1.14.1",
    "pydantic[email]>=2.10.6",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "logfire>=3.4.0",
    "pyjwt[crypto]>=2.10.1",
    "sqlalchemy>=2.0.38",
    "psycopg2-binary>=2.9.10",
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
    "pgvector>=0.3.6",
    "svix>=1.56.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pre-commit>=4.0.1",
    "ruff>=0.9.4",
]
lint = [
    "ruff>=0.9.4",
]

[build-system]
requires = ["setuptools", "wheel", "pip"]
build-backend = "setuptools.build_meta"
